[BACKLOG-30711] Run javascript against JSHint scan, cleanup code, fix minor UI spacing, populate cluster name and version on edit, make testResults height expand with window (#1786)

--- a/kettle-plugins/hadoop-cluster/ui/src/main/javascript/app/components/testResults/testResults.css
+++ b/kettle-plugins/hadoop-cluster/ui/src/main/javascript/app/components/testResults/testResults.css
@@ -1,6 +1,16 @@
 .accordian {
-    border: 1px solid #d7d7d7;
-    padding:0px 15px;
-    overflow-y:auto;
-    height:390px;
+  border: 1px solid #d7d7d7;
+  padding: 0px 15px;
+  overflow-y: auto;
+  height: calc(100% - 2px);
+}
+
+.test-results-main {
+  padding: 30px;
+  min-width: 545px;
+  height: calc(100% - 147px);
+}
+
+.test-results-middle {
+  height: calc(100% - 63px)
 }
